force-app/main/default/objects/Department_Code__c/Department_Code__c.object-meta.xml
<CustomObject>
    <description>Code that drives logic of which accounting codes can be selected for a particular reimbursement. Contains both VTM and PeopleSoft codes.</description>
    <label>Department Code</label>
    <nameField>
        <label>Department Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>