force-app/main/default/objects/Department_Code__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Captures the business unit used by VTM for reimbursements.</description>
    <inlineHelpText>Enter the VTM business unit associated with this department code.</inlineHelpText>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>