force-app/main/default/objects/Department_Code__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Captures the department value used by VTM for reimbursements.</description>
    <inlineHelpText>Enter the VTM Department value associated with this department code.</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>