force-app/main/default/objects/Department_Code__c/fields/Operating_Unit__c.field-meta.xml
<CustomField>
    <fullName>Operating_Unit__c</fullName>
    <description>Captures the operating unit used by VTM for reimbursements.</description>
    <inlineHelpText>Enter the VTM operating unit value that is associated with this department code.</inlineHelpText>
    <label>Operating Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>