force-app/main/default/objects/Department_Code__c/fields/PeopleSoft_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Business_Unit__c</fullName>
    <description>Captures the business unit description used by PeopleSoft.</description>
    <label>PeopleSoft Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>