force-app/main/default/objects/Department_Code__c/fields/PeopleSoft_Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Business_Unit_Code__c</fullName>
    <description>Captures the business unit code used by PeopleSoft.</description>
    <label>PeopleSoft Business Unit Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>