force-app/main/default/objects/Department_Code__c/fields/PeopleSoft_Department__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Department__c</fullName>
    <description>Captures the department used by PeopleSoft for reimbursements.</description>
    <inlineHelpText>Enter the PeopleSoft department associated with this department code.</inlineHelpText>
    <label>PeopleSoft Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>