force-app/main/default/objects/Department_Code__c/fields/PeopleSoft_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Department_Code__c</fullName>
    <description>Captures the department code used by PeopleSoft for reimbursements.</description>
    <inlineHelpText>Enter the PeopleSoft department code associated with this department code.</inlineHelpText>
    <label>PeopleSoft Department Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>