force-app/main/default/objects/Department_Code__c/fields/PeopleSoft_Operating_Unit__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Operating_Unit__c</fullName>
    <description>Captures the operating unit value used by PeopleSoft.</description>
    <label>PeopleSoft Operating Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>