force-app/main/default/objects/Department_Code__c/fields/PeopleSoft_Operating_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Operating_Unit_Code__c</fullName>
    <description>Captures the operating unit code used by PeopleSoft.</description>
    <label>PeopleSoft Operating Unit Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>