force-app/main/default/objects/Department_Code__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associates a department code to a particular enterprise-level program.</description>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Department Codes</relationshipLabel>
    <relationshipName>Department_Codes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>